--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -226,31 +226,29 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 \subsection{Panaudojamumo siekiai ir matai}
 	\textbf{Bendri:}
 \begin{enumerate}
-	\item Naudotojas galės filtruoti paieškos rezultatus pagal skirtingas rastas grupes
-	\item Naujas vartotojas paieškos langą surasti galės ne per ilgesnį laiką, nei 30 sekundžių.
-	\item 80\% paieškų bus rezultatyvios.
 	\item Vartotojui įvedus ne mažiau, kaip 3 simbolius į paieškos langą bus siūlomi pilni paieškos tekstai
-	\item Vartotojas galės mokėjimo ruošinių ieškoti pagal pavadinimą, gavėją bei mokėjimo paskirtį
-	\item Mokėjimo ruošinio sukurimo langą vartotojas galės pasiekti ne per daugiau, negu 3 mygtukų paspaudimus.
 	\item Kurdamas mokėjimo ruošinį vartotojas gaus bent 2 pasirinkimus jam sukurti.
 	\item Vartotojas galės įvesti sumą bei pradėti pavedimą pagrindiniame lange.
 	\item Vartotojas galės pasirinkti gavėją iš gavėjų arba ankstesnių gavėjų sąrašų.
-	\item Vartotojas mokėjimų išrašo langą pasieks ne per daugiau, nei 2 mygtuko paspaudymus.
 	\item Mokėjimo išrašo datos apsibrėžime nebus būtina pasirinkti dieną (užteks mėnesio).
-	\item 97\% patyrusių klientų iš pirmo karto pasirinks norimą datą mokėjimo išrašui gauti.
 	\item Išrašo rezultatus bus galima filtruoti bent 4 būdais.
 \end{enumerate}
 	\textbf{Naujokų:}
 \begin{enumerate}[resume]
+	\item vartotojas paieškos langą surasti gebės ne per ilgesnį laiką, nei 30 sekundžių.
 	\item Vartotojas gebės atlikti pavedimą per ne ilgiau kaip 2 minutes.
-	\item 97% vartotojų gebės pirmu bandymu rasti mokėjimo pavedimo funkciją.
+	\item 97\% vartotojų gebės pirmu bandymu rasti mokėjimo pavedimo funkciją.
 \end{enumerate}
 	\textbf{Vidutiniškai patyrusių:}
 \begin{enumerate}[resume]
-	\item
+	\item Naudotojas gebės filtruoti paieškos rezultatus pagal skirtingas rastas grupes
+	\item Vartotojas mokėjimų išrašo langą gebės pasiekti ne per daugiau, nei 2 mygtuko paspaudymus.
+	\item Mokėjimo ruošinio sukurimo langą vartotojas gebės pasiekti ne per daugiau, negu 3 mygtukų paspaudimus.
+	\item 80\% vartotojų gebės rasti ieškomos informacijos.
 \end{enumerate}
 \textbf{Patyrusių:}
 \begin{enumerate}[resume]
+	\item Vartotojas gebės mokėjimo ruošinių ieškoti pagal pavadinimą, gavėją bei mokėjimo paskirtį
 	\item Vartotojas, rinkdamasis gavėją iš pateiktų sąrašų, gebės atlikti pavedimą 3 mygtukų paspaudimu.
 \end{enumerate}
 \pagebreak
