--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -259,7 +259,7 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 	\end{center}
   \caption{Mygtukai iš mobiliosios aplikacijos (Swedbank mobilioji programėlė)}
 	\label{fig:mobileApp}
-	Nauda: Piktogramos visiems labiau suprantamos, lengviau skaitomos, jų pagalba norimus puslapius galima rasti greičiau.
+	Nauda: Suprantamesnių bei lengviau skaitomų piktogramų pagalba norimus puslapius galima rasti greičiau.
 \end{figure}
 \begin{figure}[!htb]
 	\begin{center}
@@ -267,7 +267,7 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 	\end{center}
   \caption{Gavėjų sąrašas aplikacijoje (Swedbank mobilioji programėlė)}
 	\label{fig:mobileAppRecipientList}
-	Nauda: galima pasirinkti gavėją bei visą būtiną informaciją iš gavėjų sąrašo.
+	Nauda: Galima pasirinkti gavėją iš sąrašo.
 \end{figure}
 \begin{figure}[!htb]
 	\begin{center}
@@ -275,7 +275,7 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 	\end{center}
   \caption{Mokėjimo forma aplikacijoje (Swedbank mobilioji programėlė)}
 	\label{fig:mobileAppPaymentForm}
-	Nauda:  įvesti reikia tik būtiną, esminę informaciją, vartotojo neprašo įvesti nebūtinos informacijos.
+	Nauda: Būtina įvesti tik esminę informaciją.
 \end{figure}
 \begin{figure}[!htb]
   \includegraphics[width=\linewidth]{iconPlacement.png}
