Papildytas būsimasis scenarijus.

--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -217,13 +217,14 @@ Funkcijos pasiekiamumas: vartotojas funkciją pasiekia dviem žingsniais. Norint
 Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (1). Dėl to kiekvieną kartą norint pakeistį mėnesį, reikės pasirinkti dieną. (Vidutiniškai) patyrusį vartotoją papildomo žingsnio atkartojimas erzins. Taigi tobulintinas aspektas yra numatytosios dienos pridėjimas į išrašo laikotarpio pradžią, kai pasirenkamas mėnuo.
 \subsubsection{Būsimasis patobulintas scenarijus}
 \begin{center}
-	\textbf{Vartotojas norėdamas peržiūrėti sąskaitos išrašą:}
+	\textbf{Norėdamas peržiūrėti sąskaitos išrašą:}
 \end{center}
 \begin{enumerate}
-	\item Vartotojas prisijungia prie interneto banko
-	\item Vartotojas meniu pasirenka „Išrašas"
-	\item Vartotojas pasirenka norimą mėnesį, o sistema dienos reikšmę nustato „1"
-	\item Vartotojas pasirenka „Pateikti užklausą"
+	\item Vartotojas prisijungia prie interneto banko;
+	\item Vartotojas meniu pasirenka „Išrašas";
+	\item Sistema atidaro kalendoriaus sąsają;
+	\item Vartotojas pasirenka norimą mėnesį, o sistema dienos reikšmę nustato „1";
+	\item Vartotojas paspaudžia mygtuką „Pateikti užklausą".
 \end{enumerate}
 \subsection{Panaudojamumo siekiai ir matai}
 	\textbf{Bendri:}
@@ -244,7 +245,7 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 	\textbf{Vidutiniškai patyrusių:}
 \begin{enumerate}[resume]
 	\item Naudotojas gebės filtruoti paieškos rezultatus pagal skirtingas rastas grupes
-	\item Vartotojas mokėjimų išrašo langą gebės pasiekti ne per daugiau, nei 2 mygtuko paspaudymus.
+	\item Vartotojas mokėjimų išrašo langą gebės pasiekti ne per daugiau, nei 2 mygtuko paspaudimus.
 	\item Mokėjimo ruošinio sukurimo langą vartotojas gebės pasiekti ne per daugiau, negu 3 mygtukų paspaudimus.
 	\item 80\% vartotojų gebės rasti ieškomos informacijos.
 \end{enumerate}
