--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -223,8 +223,12 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 	\item Vartotojas prisijungia prie interneto banko;
 	\item Vartotojas meniu pasirenka „Išrašas";
 	\item Sistema atidaro kalendoriaus sąsają;
-	\item Vartotojas pasirenka norimą mėnesį, o sistema dienos reikšmę nustato „1";
-	\item Vartotojas paspaudžia mygtuką „Pateikti užklausą".
+	\begin{enumerate}
+		\item Vartotojas pasirenka norimą mėnesį;
+		\item Sistema dienos reikšmę nustato „1";
+	\end{enumerate}
+	\item Vartotojas paspaudžia mygtuką „Pateikti užklausą";
+	\item Sistema pateikia rezultatą.
 \end{enumerate}
 \subsection{Panaudojamumo siekiai ir matai}
 	\textbf{Bendri:}
