--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -203,7 +203,7 @@ Veiklos trukmė: Mokėjimo ruošinio sukūrimas turėtų užtrukti iki 10 minuč
 		\item Vartotojui pasirinkus kurti mokėjimo ruošinį nuo nulio:
 		\begin{enumerate}
 			\item Sistema vartotojui atidaro mokėjimo ruošinio sukūrimo langą, kuriame visi laukai yra tušti
-			\item Vartotojas suveda reikiamus duomenis bei išsaugo mokėjimo ruošinį
+			\item Vartotojas suveda reikiamus duomenis bei išsaugo mokėjimo ruošinį	
 		\end{enumerate}
 	\end{enumerate}
 \end{enumerate}
@@ -309,7 +309,7 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 		\includegraphics[scale=0.5]
 		{account_report.png}
 	\end{center}
-	\caption{Sąskaitos apžvalga}
+	\caption{Sąskaitos apžvalga (http://uigarage.net/banking-app-inspiration)}
 	\label{fig:saskaitosApzvalga}
 	Nauda: patraukli ir efektyvi sąskaitos išrašo peržiūra.
 \end{figure}
