pridėjau komentarą apie savo maketą

--- a/ZKS2.tex
+++ b/ZKS2.tex
@@ -41,5 +41,7 @@
 \tableofcontents
 \section{Džiugo Mažulio maketas}
 \section{Justo Tvarijono maketas}
+Šiame makete navigacija vyksta naudojantis mygtukų juosta esančia kairėje lango pusėje. Ši pozicija pasirinkta todėl, kadangi ši sritys yra viena iš sričių, kurios sulaukia daugiausiai dėmesio(t.y. į jas vartotojai ilgiausiai žiūri). Mygtukų juostos išdėstymas yra intuityvus - dažniausiai naudojamų funkcijų grupes pasiekiantys mygtukai yra arčiau ekrano viršaus, rečiau naudojami žemiau. Vartotojų patogumui kiekvieno lango viršuje yra gerai matomas paieškos laukas, tad vartotojai norėdami sutaupyti laiko gali patekti į norimą puslapį suvesdami raktinį žodį bei pasirinkę reikiamą rezultatą. Taip pat vartotojų patogumui naudojamasi ir "Duonos trupinių" navigacijos šablonu, kad vartotojui būtų aišku, kurioje hierarchijos vietoje jis šiuo metu yra(ypač vartotojams patekiusiem į tam tikrą langą iš paieškos lango). \par Turinio klasifikacija remiasi tinklo struktūra - tam tikri pasirinkimai gali būti pasiekiami ne vienu, o keliais skirtingais būdais, tačiau pats informacijos klasifikavimas remiasi hierarchine struktūra - pasirinkus platesnę grupę funkcijų parodomos jau siauresnės tos grupės funkcijos.
+
 \section{Michal Stankevič maketas}
 \end{document}
