Aprašymas Michalo Stankevič maketo.

--- a/ZKS2.tex
+++ b/ZKS2.tex
@@ -43,5 +43,8 @@
 \section{Justo Tvarijono maketas}
 Šiame makete navigacija vyksta naudojantis mygtukų juosta esančia kairėje lango pusėje. Ši pozicija pasirinkta todėl, kadangi ši sritys yra viena iš sričių, kurios sulaukia daugiausiai dėmesio(t.y. į jas vartotojai ilgiausiai žiūri). Mygtukų juostos išdėstymas yra intuityvus - dažniausiai naudojamų funkcijų grupes pasiekiantys mygtukai yra arčiau ekrano viršaus, rečiau naudojami žemiau. Vartotojų patogumui kiekvieno lango viršuje yra gerai matomas paieškos laukas, tad vartotojai norėdami sutaupyti laiko gali patekti į norimą puslapį suvesdami raktinį žodį bei pasirinkę reikiamą rezultatą. Taip pat vartotojų patogumui naudojamasi ir "Duonos trupinių" navigacijos šablonu, kad vartotojui būtų aišku, kurioje hierarchijos vietoje jis šiuo metu yra(ypač vartotojams patekiusiem į tam tikrą langą iš paieškos lango). \par Turinio klasifikacija remiasi tinklo struktūra - tam tikri pasirinkimai gali būti pasiekiami ne vienu, o keliais skirtingais būdais, tačiau pats informacijos klasifikavimas remiasi hierarchine struktūra - pasirinkus platesnę grupę funkcijų parodomos jau siauresnės tos grupės funkcijos.
 
-\section{Michal Stankevič maketas}
+\section{Michalo Stankevič maketas}
+Maketo ypatingasis bruožas - nestandartinių, žaismingų sprendimų panaudojimas. Pagrindinės interneto banko funkcijų grupės pavaizduotos septynkampyje. Remdamasis asmenine patirtimi (susiduręs su atvejais, kad paieškos laukas yra vos pastebimas), skyriau daug vietos paieškos funkcijos metaforai - tai yra septynkampio viduje yra mažesnis septynkampis, „įgalinantis” vartotoją naudotis paieškos funkcija. Dėmesiui atkreipti naudojama paieškos metafora - didinamasis stiklas, bet teksto spalva šiek tiek nuslopinama, nes tai nėra specifinė dalykinės srities funkcija. Prie septynkampio išdėstyta proporcingai labai didelė pervedimo funkcijos nuoroda - tekstinis laukas, į kurį įvedama pinigų suma kartu su mygtukais „Siųsti” ir „Gauti”. Mygtukų eiliškumas pagrįstas funkcijų panaudojimo dažniu - tikėtinesnis pinigų siuntimo atvejis.
+Makete įgyvendintos dvi internetinės programėlės funkcijos - vietinio mokėjimo atlikimas bei informacijos paieška. \par
+Kiekviename lange yra galimybė grįžti į pagrindinį langą. Paieškos įvesties forma - tekstinis laukas - uždaroma paspaudimu į bet kurį tašką, nepriklausantį įvesties formos plotui.
 \end{document}
