--- a/ZKS2.tex
+++ b/ZKS2.tex
@@ -40,8 +40,10 @@
 \maketitle
 \tableofcontents
 \section{Džiugo Mažulio maketas}
+Maketo navigacijoje pateikta ne tipinė paieška: kadangi banko sistemoje tai yra retai naudojama funkcija bei pastovi navigacijos juosta talpina dažniausiai naudojamą funkcionalumą paspaudus ant lupos piktogramos, esančios navigacijos juostoje, vietoje išsiplečiančio teksto įvedimo lauko vartotojas nukreipiamas į išplėstinės paieškos puslapį, kuriame turi galimybę rikiuoti, filtruoti paiešką pagal kriterijus vertikaliai slankioje juostoje. Minėtoje horizontalioje navigacijos juostoje esančios operacijos yra išrikiuotos pagal naudojamumą iš kairės į dešinę. Tai yra ne tik intuityvi, bet ir įprasta rikiavimo tvarka elektroninių bankų sistemose, todėl turėtų pagerinti vartotojo naršymo efektyvumą. Kaip „Duonos trupinių“ alternatyva buvo priimtas sprendimas paryškinti esamą vartotojo poziciją navigacijos juostoje bei užrašyti kategorijos pavadinimą naršyklės viršuje. \par Informacijos klasifikavimas tinklo struktūra realizuojamas pasirinkus kategoriją „Mokėjimai“ navigacijos juostoje: vaizduojamame lange vartotojas turi galimybę pasirinkti subkategoriją.
+
 \section{Justo Tvarijono maketas}
-Šiame makete navigacija vyksta naudojantis mygtukų juosta esančia kairėje lango pusėje. Ši pozicija pasirinkta todėl, kadangi ši sritys yra viena iš sričių, kurios sulaukia daugiausiai dėmesio(t.y. į jas vartotojai ilgiausiai žiūri). Mygtukų juostos išdėstymas yra intuityvus - dažniausiai naudojamų funkcijų grupes pasiekiantys mygtukai yra arčiau ekrano viršaus, rečiau naudojami žemiau. Vartotojų patogumui kiekvieno lango viršuje yra gerai matomas paieškos laukas, tad vartotojai norėdami sutaupyti laiko gali patekti į norimą puslapį suvesdami raktinį žodį bei pasirinkę reikiamą rezultatą. Taip pat vartotojų patogumui naudojamasi ir "Duonos trupinių" navigacijos šablonu, kad vartotojui būtų aišku, kurioje hierarchijos vietoje jis šiuo metu yra(ypač vartotojams patekiusiem į tam tikrą langą iš paieškos lango). \par Turinio klasifikacija remiasi tinklo struktūra - tam tikri pasirinkimai gali būti pasiekiami ne vienu, o keliais skirtingais būdais, tačiau pats informacijos klasifikavimas remiasi hierarchine struktūra - pasirinkus platesnę grupę funkcijų parodomos jau siauresnės tos grupės funkcijos.
+Šiame makete navigacija vyksta naudojantis mygtukų juosta esančia kairėje lango pusėje. Ši pozicija pasirinkta todėl, kad tai yra viena iš sričių, kurios sulaukia daugiausiai dėmesio(t.y. į jas vartotojai ilgiausiai žiūri). Mygtukų juostos išdėstymas yra intuityvus - dažniausiai naudojamų funkcijų grupes pasiekiantys mygtukai yra arčiau ekrano viršaus, rečiau naudojami žemiau. Vartotojų patogumui kiekvieno lango viršuje yra gerai matomas paieškos laukas, tad vartotojai norėdami sutaupyti laiko gali patekti į norimą puslapį suvesdami raktinį žodį bei pasirinkę reikiamą rezultatą. Taip pat vartotojų patogumui naudojamasi ir "Duonos trupinių" navigacijos šablonu, kad vartotojui būtų aišku, kurioje hierarchijos vietoje jis šiuo metu yra(ypač vartotojams patekiusiem į tam tikrą langą iš paieškos lango). \par Turinio klasifikacija remiasi tinklo struktūra - tam tikri pasirinkimai gali būti pasiekiami ne vienu, o keliais skirtingais būdais, tačiau pats informacijos klasifikavimas remiasi hierarchine struktūra - pasirinkus platesnę grupę funkcijų parodomos jau siauresnės tos grupės funkcijos.
 
 \section{Michalo Stankevič maketas}
 Maketo ypatingasis bruožas - nestandartinių, žaismingų sprendimų panaudojimas. Pagrindinės interneto banko funkcijų grupės pavaizduotos septynkampyje. Remdamasis asmenine patirtimi (susiduręs su atvejais, kad paieškos laukas yra vos pastebimas), skyriau daug vietos paieškos funkcijos metaforai - tai yra septynkampio viduje yra mažesnis septynkampis, „įgalinantis” vartotoją naudotis paieškos funkcija. Dėmesiui atkreipti naudojama paieškos metafora - didinamasis stiklas, bet teksto spalva šiek tiek nuslopinama, nes tai nėra specifinė dalykinės srities funkcija. Prie septynkampio išdėstyta proporcingai labai didelė pervedimo funkcijos nuoroda - tekstinis laukas, į kurį įvedama pinigų suma kartu su mygtukais „Siųsti” ir „Gauti”. Mygtukų eiliškumas pagrįstas funkcijų panaudojimo dažniu - tikėtinesnis pinigų siuntimo atvejis.
