--- a/ZKS3.tex
+++ b/ZKS3.tex
@@ -63,7 +63,16 @@ Banko klientas - turi galimybę atlikti mokėjimus, peržiūrėti sąskaitos iš
 \subsectionnonum{Darbo pagrindas}
 Trečiojo laboratorinio darbo reikalavimai.
 \section{Džiugo Mažulio maketo vertinimas}
+\subsection{Euristinis tikrinimas}
+\subsection{Pažintinė peržvalga}
+\subsection{Apibendrinimas}
 \section{Justo Tvarijono maketo vertinimas}
+\subsection{Euristinis tikrinimas}
+\subsection{Pažintinė peržvalga}
+\subsection{Apibendrinimas}
 \section{Michal Stankevič maketo vertinimas}
+\subsection{Euristinis tikrinimas}
+\subsection{Pažintinė peržvalga}
+\subsection{Apibendrinimas}
 \section{Išvados}
 \end{document}
