pridedu lentelių šabloną

--- a/ZKS3.tex
+++ b/ZKS3.tex
@@ -1,4 +1,4 @@
-\documentclass{VUMIFPSkursinis}
+\documentclass[oneside]{VUMIFPSkursinis}
 \usepackage{algorithmicx}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
@@ -17,6 +17,7 @@
 \usepackage{wrapfig}
 \usepackage{enumitem}
 \usepackage{subfig}
+\usepackage{caption}
 \usepackage{pbox}
 \renewcommand{\labelenumii}{\theenumii}
 \renewcommand{\theenumii}{\theenumi.\arabic{enumii}.}
@@ -64,7 +65,25 @@ Banko klientas - turi galimybę atlikti mokėjimus, peržiūrėti sąskaitos iš
 Trečiojo laboratorinio darbo reikalavimai.
 \section{Džiugo Mažulio maketo vertinimas}
 \subsection{Euristinis tikrinimas}
+\begin{center}
+	\begin{table}[h]
+\begin{tabular}{|p{3cm}|p{4cm}|p{8.1cm}|}
+  \hline
+  Euristika & Defekto sunkumas & Komentaras \\ \hline
+\end{tabular}
+\caption{Justo Tvarijono vertinimas}
+\end{table}
+\end{center}
 \subsection{Pažintinė peržvalga}
+\begin{center}
+\begin{table}[h]
+\begin{tabular}{|p{5cm}|p{5cm}|p{5cm}|}
+	\hline
+	Užduoties žingsniai & Ar aiškiai matoma, ką daryti? & Ar suprantamas atsakas? \\ \hline
+\end{tabular}
+\caption{Justo Tvarijono vertinimas}
+\end{table}
+\end{center}
 \subsection{Apibendrinimas}
 \section{Justo Tvarijono maketo vertinimas}
 \subsection{Euristinis tikrinimas}
