euristinis Džiugo done probably

--- a/ZKS3.tex
+++ b/ZKS3.tex
@@ -75,7 +75,9 @@ Trečiojo laboratorinio darbo reikalavimai.
 	Sistemos atitikimas realiam pasauliui & Lengvas & Vietinių mokėjimų lange vartotojui gali būti ne akivaizdu, ką reiškia terminas "Gavėjo pavadinimas" \\ \hline
 	Naudotojo valdomas dialogas & Vidutinis & Languose nėra grįžimo atgal mygtukų, vienintelis būdas grįžti yra naudojantis mygtukų juosta. \\ \hline
 	Klaidų prevencija \label{lentele:klaiduPrevencijaJ} &\hyperref[fig:klaiduPrevencijaMygtukai]{Didelis} & Vietinių mokėjimų lange mygtukai "Patvirtinti mokėjimą" ir "Išsaugoti duomenis" nėra atskirti tarpais, bei paspaudus "Patvirtinti mokėjimą" nėra atliekamas papildomas paklausimas ar vartotojas nori atlikti tą mokėjimą, todėl yra galimybė, kad vartotojas norėdamas išsaugoti duomenis prieš savo valią atliks mokėjimo pavedimą\\ \hline
-	& & \\ \hline
+	Klaidų prevencija & Lengvas & Vietinių mokėjimų lange net neįvedus gavėjo duomenų leidžiama bandyti išsaugoti jo duomenis (tada parodomas klaidos pranešimas, kuriame intuityviai pagal pelės pozicija norisi spausti tą mygtuką, kuris nukelia į pagrindinį langą). Būtų galima išjungti šį mygtuką, kol nėra užpildomi visi privalomi laukai. \\ \hline
+	Naudojimo lankstumas ir našumas & Lengvas & Gavėjo sąrašo negalima išrikiuoti pagal poreikius. Galima patobulinimas: leisti vartotojui išrikiuoti gavėjų ruošinius pagal save, kad dažniausiai naudojami/svarbiausi būtų viršuje. \\ \hline
+	Pagalba ir dokumentacija & Lengvas & Mokėjimo lange būtų gerai matyti informaciją apie laukelį į kurį yra vedama reikšmė(ta informacija turėtų aiškiai paaiškinti, kaip turi atrodyti į konkretų laukelį vedami duomenys), tai sumažėtų klaidų/neteisingai įvestų duomenų tikimybė.  \\ \hline
 \end{tabular}
 \caption{Justo Tvarijono vertinimas}
 \end{table}
