pridedu teigiamų įspūdžių

--- a/ZKS3.tex
+++ b/ZKS3.tex
@@ -66,6 +66,19 @@ Banko klientas - turi galimybę atlikti mokėjimus, peržiūrėti sąskaitos iš
 Trečiojo laboratorinio darbo reikalavimai.
 \section{Džiugo Mažulio maketo vertinimas}
 \subsection{Euristinis tikrinimas}
+% nesu tikras ar šitų skyrių prieš lentelę reikia
+\subsubsection{Metodas}
+Euristinis tikrinimas buvo atliktas remiantis dešimt Nielseno patobulintų euristikų sąrašu, bei jų išdėstymų 8 paskaitos skaidrėse.
+\subsubsection{Teigiami įspūdžiai}
+\begin{itemize}
+	\item Atlikus svarbesnius veiksmus vartotojas yra aiškiai informuojamas apie jų sėkmingą/nesėkmingą atlikimą(Būsenos matomumas).
+	\item Meniu juosta yra pasiekiama viso sistemos naudojimosi metu, taip vartotojui suteikiama galimybė pereiti į kitus langus arba atsijungti neverčiant vartotojo pirma nuvykti į pradinį puslapį(Naudojimo lankstumas ir našumas).
+	\item Tą pačią funkciją(šiuo atveju vietinius pavedimus) galima pasiekti skirtingais būdais reikalaujančiais skirtingo kiekio veiksmų, taip vartotujui suteikiant didesnę pasirinkimo laisvę(Navigacijos šuoliai).
+	\item Beveik visi naudojami terminai yra naudotini realiame pasaulyje, taip vartotojui žymiai patogiau orientuotis sistemoje(Sistemos atitikimas realiam pasauliui).
+	\item Vietinių mokėjimų lange galima rasti ne tik įvedimo laukus, bet ir mokėjimo ruošinių langą, taip išvengiant perteklinių langų naudojimo(Estetika ir minimalizmas).
+	\item Radus klaidas atliekas svarbesnius veiksmus vartotojui aiškiai paaiškinimas, kur ir kodėl įvyko klaida(Klaidų atpažinimo rėmimas).
+\end{itemize}
+\subsubsection{Defektų sąrašas}
 \begin{center}
 \begin{longtable}[h]{|p{3.5cm}|p{3.5cm}|p{8.1cm}|}
 	\caption{Justo Tvarijono vertinimas}
@@ -83,6 +96,7 @@ Trečiojo laboratorinio darbo reikalavimai.
 \end{longtable}
 \end{center}
 
+\subsubsection{Priedai}
 \begin{figure}[!htb]
 	\includegraphics[scale=0.55]{MokejimoPatvirtinimasKlaiduPrevencija.png}
   \caption{Mygtukų išdėstymas vietinių mokėjimų lange}
