still no idea, kokie poskyriai ten turi būt

--- a/ZKS3.tex
+++ b/ZKS3.tex
@@ -70,17 +70,18 @@ Trečiojo laboratorinio darbo reikalavimai.
 \subsubsection{Metodas}
 Euristinis tikrinimas buvo atliktas remiantis dešimt Nielseno patobulintų euristikų sąrašu, bei jų išdėstymų 8 paskaitos skaidrėse.
 \subsubsection{Teigiami įspūdžiai}
+Justo Tvarijono vertinimas
 \begin{itemize}
-	\item Atlikus svarbesnius veiksmus vartotojas yra aiškiai informuojamas apie jų sėkmingą/nesėkmingą atlikimą(Būsenos matomumas).
-	\item Meniu juosta yra pasiekiama viso sistemos naudojimosi metu, taip vartotojui suteikiama galimybė pereiti į kitus langus arba atsijungti neverčiant vartotojo pirma nuvykti į pradinį puslapį(Naudojimo lankstumas ir našumas).
-	\item Tą pačią funkciją(šiuo atveju vietinius pavedimus) galima pasiekti skirtingais būdais reikalaujančiais skirtingo kiekio veiksmų, taip vartotujui suteikiant didesnę pasirinkimo laisvę(Navigacijos šuoliai).
+	\item Atlikus svarbesnius veiksmus vartotojas yra aiškiai informuojamas apie jų sėkmingą/nesėkmingą atlikimą (Būsenos matomumas).
+	\item Meniu juosta yra pasiekiama viso sistemos naudojimosi metu, taip vartotojui suteikiama galimybė pereiti į kitus langus arba atsijungti neverčiant vartotojo pirma nuvykti į pradinį puslapį (Naudojimo lankstumas ir našumas).
+	\item Tą pačią funkciją(šiuo atveju vietinius pavedimus) galima pasiekti skirtingais būdais reikalaujančiais skirtingo kiekio veiksmų, taip vartotujui suteikiant didesnę pasirinkimo laisvę (Navigacijos šuoliai).
 	\item Beveik visi naudojami terminai yra naudotini realiame pasaulyje, taip vartotojui žymiai patogiau orientuotis sistemoje(Sistemos atitikimas realiam pasauliui).
-	\item Vietinių mokėjimų lange galima rasti ne tik įvedimo laukus, bet ir mokėjimo ruošinių langą, taip išvengiant perteklinių langų naudojimo(Estetika ir minimalizmas).
-	\item Radus klaidas atliekas svarbesnius veiksmus vartotojui aiškiai paaiškinimas, kur ir kodėl įvyko klaida(Klaidų atpažinimo rėmimas).
+	\item Vietinių mokėjimų lange galima rasti ne tik įvedimo laukus, bet ir mokėjimo ruošinių langą, taip išvengiant perteklinių langų naudojimo (Estetika ir minimalizmas).
+	\item Radus klaidas atliekas svarbesnius veiksmus vartotojui aiškiai paaiškinimas, kur ir kodėl įvyko klaida (Klaidų atpažinimo rėmimas).
 \end{itemize}
 \subsubsection{Defektų sąrašas}
 \begin{center}
-\begin{longtable}[h]{|p{3.5cm}|p{3.5cm}|p{8.1cm}|}
+\begin{longtable}[!htb]{|p{3.5cm}|p{3.5cm}|p{8.1cm}|}
 	\caption{Justo Tvarijono vertinimas}
 	\endfirsthead
 	\endhead
@@ -97,7 +98,7 @@ Euristinis tikrinimas buvo atliktas remiantis dešimt Nielseno patobulintų euri
 \end{center}
 
 \subsubsection{Priedai}
-\begin{figure}[!htb]
+\begin{figure}[H]
 	\includegraphics[scale=0.55]{MokejimoPatvirtinimasKlaiduPrevencija.png}
   \caption{Mygtukų išdėstymas vietinių mokėjimų lange}
 	\label{fig:klaiduPrevencijaMygtukai}
@@ -107,7 +108,7 @@ Euristinis tikrinimas buvo atliktas remiantis dešimt Nielseno patobulintų euri
 \subsection{Pažintinė peržvalga}
 
 \begin{center}
-\begin{longtable}[h]{|p{5cm}|p{5cm}|p{5cm}|}
+\begin{longtable}[!htb]{|p{5cm}|p{5cm}|p{5cm}|}
 	\caption{Justo Tvarijono vertinimas}
 \endfirsthead
 \endhead
