pridėjau priedus, pagal tvarką ten reikia profesinę patirtį užrašyt dar

--- a/ZKS3.tex
+++ b/ZKS3.tex
@@ -30,7 +30,7 @@
 \department{Programų sistemų katedra}
 \papertype{Projektinis darbas}
 \title{Internetinio banko tinklalapis}
-\titleineng{Bankininkystė}
+\titleineng{Maketų analitiniai vertinimai}
 \status{3 kurso 3 grupės studentai}
 \author{Justas Tvarijonas}
 \secondauthor{Džiugas Mažulis}   
@@ -130,4 +130,10 @@ Justo Tvarijono vertinimas
 \subsection{Pažintinė peržvalga}
 \subsection{Apibendrinimas}
 \section{Išvados}
+\section{Priedai}
+	\begin{itemize}
+		\item Justas Tvarijonas - VU MIF programų sistemų sistemos 3 kurso studentas.
+		\item Džiugas Mažulis - VU MIF programų sistemų sistemos 3 kurso studentas.
+		\item Michal Stankevič - VU MIF programų sistemų sistemos 3 kurso studentas.
+	\end{itemize}
 \end{document}
